// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render caveat if no courses have grading periods 1`] = `
<View
  debug={false}
  display="auto"
  overflowX="visible"
  overflowY="visible"
>
  <View
    debug={false}
    display="auto"
    overflowX="visible"
    overflowY="visible"
    textAlign="center"
  >
    <Heading
      border="none"
      color="inherit"
      ellipsis={false}
      level="h2"
      margin="0 0 large 0"
    >
      <Text
        as="span"
        letterSpacing="normal"
        size="medium"
        weight="bold"
      >
        My Grades
      </Text>
    </Heading>
  </View>
  <View
    as="div"
    debug={false}
    display="auto"
    key="1"
    margin="0 0 large 0"
    overflowX="visible"
    overflowY="visible"
  >
    <div
      className="GradesDisplay-styles__course"
      style={
        Object {
          "borderBottom": "solid thin",
          "borderBottomColor": "blue",
        }
      }
    >
      <Button
        as="button"
        buttonRef={[Function]}
        cursor="pointer"
        fluidWidth={false}
        href="/courses/1/grades"
        margin="0"
        size="small"
        theme={
          Object {
            "smallHeight": "normal",
            "smallPadding": "0",
          }
        }
        type="button"
        variant="link"
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="medium"
          transform="uppercase"
        >
          Ticket to Ride 101
        </Text>
      </Button>
    </div>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      weight="light"
    >
      No Grade
    </Text>
  </View>
</View>
`;

exports[`renders a loading spinner when loading 1`] = `
<View
  debug={false}
  display="auto"
  overflowX="visible"
  overflowY="visible"
>
  <View
    debug={false}
    display="auto"
    overflowX="visible"
    overflowY="visible"
    textAlign="center"
  >
    <Heading
      border="none"
      color="inherit"
      ellipsis={false}
      level="h2"
      margin="0 0 large 0"
    >
      <Text
        as="span"
        letterSpacing="normal"
        size="medium"
        weight="bold"
      >
        My Grades
      </Text>
    </Heading>
  </View>
  <View
    as="div"
    debug={false}
    display="auto"
    margin="0 0 large 0"
    overflowX="visible"
    overflowY="visible"
    textAlign="center"
  >
    <Spinner
      as="div"
      size="small"
      title="Grades are loading"
      variant="default"
    />
  </View>
</View>
`;

exports[`renders an ErrorAlert if there is an error loading grades 1`] = `
<View
  debug={false}
  display="auto"
  overflowX="visible"
  overflowY="visible"
>
  <ErrorAlert
    error="There was an error"
  >
    Error loading grades
  </ErrorAlert>
  <View
    debug={false}
    display="auto"
    overflowX="visible"
    overflowY="visible"
    textAlign="center"
  >
    <Heading
      border="none"
      color="inherit"
      ellipsis={false}
      level="h2"
      margin="0 0 large 0"
    >
      <Text
        as="span"
        letterSpacing="normal"
        size="medium"
        weight="bold"
      >
        My Grades
      </Text>
    </Heading>
  </View>
</View>
`;

exports[`renders some course grades 1`] = `
<View
  debug={false}
  display="auto"
  overflowX="visible"
  overflowY="visible"
>
  <View
    debug={false}
    display="auto"
    overflowX="visible"
    overflowY="visible"
    textAlign="center"
  >
    <Heading
      border="none"
      color="inherit"
      ellipsis={false}
      level="h2"
      margin="0 0 large 0"
    >
      <Text
        as="span"
        letterSpacing="normal"
        size="medium"
        weight="bold"
      >
        My Grades
      </Text>
    </Heading>
  </View>
  <View
    as="div"
    debug={false}
    display="auto"
    key="1"
    margin="0 0 large 0"
    overflowX="visible"
    overflowY="visible"
  >
    <div
      className="GradesDisplay-styles__course"
      style={
        Object {
          "borderBottom": "solid thin",
          "borderBottomColor": "blue",
        }
      }
    >
      <Button
        as="button"
        buttonRef={[Function]}
        cursor="pointer"
        fluidWidth={false}
        href="/courses/1/grades"
        margin="0"
        size="small"
        theme={
          Object {
            "smallHeight": "normal",
            "smallPadding": "0",
          }
        }
        type="button"
        variant="link"
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="medium"
          transform="uppercase"
        >
          Ticket to Ride 101
        </Text>
      </Button>
    </div>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      weight="light"
    >
      No Grade
    </Text>
  </View>
  <View
    as="div"
    debug={false}
    display="auto"
    key="2"
    margin="0 0 large 0"
    overflowX="visible"
    overflowY="visible"
  >
    <div
      className="GradesDisplay-styles__course"
      style={
        Object {
          "borderBottom": "solid thin",
          "borderBottomColor": "green",
        }
      }
    >
      <Button
        as="button"
        buttonRef={[Function]}
        cursor="pointer"
        fluidWidth={false}
        href="/courses/2/grades"
        margin="0"
        size="small"
        theme={
          Object {
            "smallHeight": "normal",
            "smallPadding": "0",
          }
        }
        type="button"
        variant="link"
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="medium"
          transform="uppercase"
        >
          Ingenious 101
        </Text>
      </Button>
    </div>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      weight="light"
    >
      42.34%
    </Text>
  </View>
  <View
    as="div"
    debug={false}
    display="auto"
    key="3"
    margin="0 0 large 0"
    overflowX="visible"
    overflowY="visible"
  >
    <div
      className="GradesDisplay-styles__course"
      style={
        Object {
          "borderBottom": "solid thin",
          "borderBottomColor": "red",
        }
      }
    >
      <Button
        as="button"
        buttonRef={[Function]}
        cursor="pointer"
        fluidWidth={false}
        href="/courses/3/grades"
        margin="0"
        size="small"
        theme={
          Object {
            "smallHeight": "normal",
            "smallPadding": "0",
          }
        }
        type="button"
        variant="link"
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="medium"
          transform="uppercase"
        >
          Settlers of Catan 201
        </Text>
      </Button>
    </div>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      weight="light"
    >
      No Grade
    </Text>
  </View>
  <View
    as="div"
    debug={false}
    display="auto"
    overflowX="visible"
    overflowY="visible"
    textAlign="center"
  >
    <Text
      as="span"
      fontStyle="italic"
      letterSpacing="normal"
      size="x-small"
    >
      *Only most recent grading period shown.
    </Text>
  </View>
</View>
`;
